--- a/package.json
+++ b/package.json
@@ -4,12 +4,19 @@
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
+    "dev:host": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@nuxt/devtools": "latest",
-    "nuxt": "^3.7.0"
+    "@nuxt/devtools": "^0.8.2",
+    "@nuxtjs/tailwindcss": "^6.8.0",
+    "nuxt": "^3.7.0",
+    "nuxt-headlessui": "^1.1.4"
+  },
+  "dependencies": {
+    "@heroicons/vue": "^2.0.18",
+    "@nuxthq/ui": "^2.7.0"
   }
 }
