--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@nuxt/devtools": "^0.8.2",
     "@nuxtjs/tailwindcss": "^6.8.0",
+    "daisyui": "^3.6.5",
     "nuxt": "^3.7.0",
     "nuxt-headlessui": "^1.1.4"
   },
